# forge

./: .gitignore  .tmuxp.yaml  README.md  devenv.nix  forge.yaml.example  pyproject.toml
.scratch/projects/01-code-review/: CODE_REVIEW.md  REVIEW_REFACTORING_GUIDE.md
.scratch/projects/02-reconcept-refactoring/: FORGE_INTERFACE_ARCHITECTURE.md  FORGE_INTERFACE_ARCHITECTURE_MVP.md  MVP_IMPLEMENTATION_GUIDE.md
.scratch/projects/03-docker-tailscale-obsidian-vault/: ASSUMPTIONS.md  CONTAINER_OVERVIEW.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/04-windows-docker-install/: INSTALL_GUIDE.md
.scratch/projects/05-obsidian-agent/: OBSIDIAN_AGENT_CONCEPT.md
.scratch/projects/06-forge-architecture-refactor/: DEPENDENCY_LIBRARY_REVIEW.md  REFACTOR_PLAN_REVIEW.md  forge-architecture-refactor.md
.scratch/projects/07-forge-architecture-refactor-plan/: ARCHITECTURE_REFACTOR_GUIDE.md  ARCHITECTURE_REFACTOR_PLAN.md  ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/08-demo-review/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  DEMO_REVIEW.md  DEMO_SCRIPT.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/09-forge-roadmap-brainstorm/: ROADMAP_BRAINSTORM.md
.scratch/projects/10-docker-layout-readiness/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  PLAN.md  PROGRESS.md
.scratch/projects/11-docker-vault-sync/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/12-ui-improvements/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  FORGE_EXPANSION_IMPLEMENTATION_GUIDE.md  FORGE_FEATURE_ADDITION.md  FORGE_FEATURE_ADDITION_v2.md  ISSUES.md  OBSIDIAN_AGENT_EXPANSION_IMPLEMENTATION_GUIDE.md  OBSIDIAN_OPS_EXPANSION_IMPLEMENTATION_GUIDE.md  PLAN.md  PROGRESS.md
.scratch/projects/13-code-review/: ASSUMPTIONS.md  CODE_REVIEW.md  CONTEXT.md  FINAL_REVIEW.md  ISSUES.md  PLAN.md  PROGRESS.md  REVIEW_REFACTORING_GUIDE.md  REVIEW_REFACTORING_STATUS.md
.scratch/projects/20-demo-review/: DEMO_REVIEW.md  (+1 more)
demo/: DEMO_SCRIPT.md  README.md
demo/.obsidian/: workspace.json
demo/overlay/: ops.css  ops.js
demo/scripts/: cleanup.py  cleanup.sh  common.sh  lib.py  run_demo.py  run_demo_production_ui.py  run_free_explore.py  setup.py  setup.sh  start_stack.py  start_stack.sh  start_stack_free_explore.py  validate_full_stack.py  validate_full_stack.sh
demo/tools/: dummy_api_server.py
demo/vault-template/: index.md
docker/: .env.example  README.md  docker-compose.yml  down.py  entrypoint.py  forge.Dockerfile  up.py  validate.py
docs/: ARCHITECTURE.md  DEV_GUIDE.md  SETUP_GUIDE.md
src/forge_cli/: __init__.py  __main__.py  commands.py  config.py  demo_entrypoints.py  processes.py
src/overlay/: README.md  ops.css  ops.js
tests/: conftest.py  test_bootstrap.py  test_commands.py  test_config.py  test_demo_harness.py  test_demo_lib.py  test_processes.py  test_sync_integration.py
(+76 files in other folders)
