[project]
name = "forge"
version = "0.2.0"
description = "Forge orchestration and tooling."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.0.0",
  "typer>=0.12",
  "httpx>=0.28",
  "pyyaml>=6.0",
  "forge-overlay",
  "obsidian-agent",
  "obsidian-ops",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.10",
  "ruff>=0.5.0",
]


[project.scripts]
forge = "forge_cli.__main__:main"
forge-demo-setup = "forge_cli.demo_entrypoints:demo_setup"
forge-demo-start = "forge_cli.demo_entrypoints:demo_start"
forge-demo-validate = "forge_cli.demo_entrypoints:demo_validate"
forge-demo-run = "forge_cli.demo_entrypoints:demo_run"
forge-demo-cleanup = "forge_cli.demo_entrypoints:demo_cleanup"
forge-demo-start-free-explore = "forge_cli.demo_entrypoints:demo_start_free_explore"
forge-demo-run-free-explore = "forge_cli.demo_entrypoints:demo_run_free_explore"
forge-docker-up = "forge_cli.demo_entrypoints:docker_up"
forge-docker-down = "forge_cli.demo_entrypoints:docker_down"

#[project.urls]
#homepage = "https://github.com/Bullish-Design/forge"
#repository = "https://github.com/Bullish-Design/forge.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/forge_cli)
packages = ["src/forge_cli"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]

[tool.uv.sources]
forge-overlay = { git = "https://github.com/Bullish-Design/forge-overlay.git", tag = "v0.2.1" }
obsidian-agent = { git = "https://github.com/Bullish-Design/obsidian-agent.git", tag = "v0.3.1" }
obsidian-ops = { git = "https://github.com/Bullish-Design/obsidian-ops.git", tag = "v0.7.1" }

[tool.forge.external]
kiln_fork_repo = "https://github.com/Bullish-Design/kiln-fork.git"
kiln_fork_tag = "v0.10.3"

[tool.pytest.ini_options]
addopts = "-q --cov=forge_cli --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "integration: tests that run multi-process demo harness validation",
]

[tool.mypy]
python_version = "3.13"
packages = ["src/forge_cli"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
